--- a/example/Filter_Test/G474VET6Test.ioc
+++ b/example/Filter_Test/G474VET6Test.ioc
@@ -63,56 +63,38 @@ KeepUserPlacement=false
 Mcu.CPN=STM32G474VET6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
-Mcu.IP1=FMC
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI3
-Mcu.IP5=SYS
-Mcu.IP6=TIM7
-Mcu.IP7=USART1
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=10
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI3
+Mcu.IP4=SYS
+Mcu.IP5=TIM7
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32G474V(B-C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PE7
-Mcu.Pin11=PE8
-Mcu.Pin12=PE9
-Mcu.Pin13=PE10
-Mcu.Pin14=PD14
-Mcu.Pin15=PD15
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PC11
+Mcu.Pin14=PB3
+Mcu.Pin15=PB5
+Mcu.Pin16=PE0
+Mcu.Pin17=PE1
+Mcu.Pin18=VP_SYS_V_VREFBUF
+Mcu.Pin19=VP_SYS_VS_tim6
 Mcu.Pin2=PE5
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PC11
-Mcu.Pin23=PD0
-Mcu.Pin24=PD1
-Mcu.Pin25=PD4
-Mcu.Pin26=PD5
-Mcu.Pin27=PD7
-Mcu.Pin28=PB3
-Mcu.Pin29=PB5
+Mcu.Pin20=VP_SYS_VS_DBSignals
+Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PE6
-Mcu.Pin30=PE0
-Mcu.Pin31=PE1
-Mcu.Pin32=VP_SYS_V_VREFBUF
-Mcu.Pin33=VP_SYS_VS_tim6
-Mcu.Pin34=VP_SYS_VS_DBSignals
-Mcu.Pin35=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PC13
 Mcu.Pin5=PC14-OSC32_IN
 Mcu.Pin6=PC15-OSC32_OUT
-Mcu.Pin7=PF10
-Mcu.Pin8=PF0-OSC_IN
-Mcu.Pin9=PF1-OSC_OUT
-Mcu.PinsNb=37
+Mcu.Pin7=PF0-OSC_IN
+Mcu.Pin8=PF1-OSC_OUT
+Mcu.Pin9=PA9
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474VETx
@@ -132,19 +114,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM7_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_DAC_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.Mode=Device
-PA11.Signal=USB_DM
-PA12.Mode=Device
-PA12.Signal=USB_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -181,20 +158,6 @@ PC15-OSC32_OUT.GPIO_Label=RGB_B
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.PinState=GPIO_PIN_SET
 PC15-OSC32_OUT.Signal=GPIO_Output
-PD0.Mode=8b-d1
-PD0.Signal=FMC_D2
-PD1.Mode=8b-d1
-PD1.Signal=FMC_D3
-PD14.Mode=8b-d1
-PD14.Signal=FMC_D0
-PD15.Mode=8b-d1
-PD15.Signal=FMC_D1
-PD4.Mode=Lcd1
-PD4.Signal=FMC_NOE
-PD5.Mode=Lcd1
-PD5.Signal=FMC_NWE
-PD7.Mode=NorPsramChipSelect1_1
-PD7.Signal=FMC_NE1
 PE0.GPIOParameters=GPIO_Speed,GPIO_Label
 PE0.GPIO_Label=LCD_DC
 PE0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -205,8 +168,6 @@ PE1.GPIO_Label=LCD_CS
 PE1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PE1.Locked=true
 PE1.Signal=GPIO_Output
-PE10.Mode=8b-d1
-PE10.Signal=FMC_D7
 PE3.GPIOParameters=GPIO_Label
 PE3.GPIO_Label=KEY4
 PE3.Locked=true
@@ -223,18 +184,10 @@ PE6.GPIOParameters=GPIO_Label
 PE6.GPIO_Label=KEY1
 PE6.Locked=true
 PE6.Signal=GPIO_Input
-PE7.Mode=8b-d1
-PE7.Signal=FMC_D4
-PE8.Mode=8b-d1
-PE8.Signal=FMC_D5
-PE9.Mode=8b-d1
-PE9.Signal=FMC_D6
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
-PF10.Mode=A0_1
-PF10.Signal=FMC_A0
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -250,7 +203,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -266,7 +219,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -331,10 +284,6 @@ TIM7.PeriodNoDither=10000-1
 TIM7.Prescaler=168-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
-USB_DEVICE.VirtualMode=Cdc
-USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_tim6.Mode=TIM6
@@ -343,6 +292,4 @@ VP_SYS_V_VREFBUF.Mode=ExternalMode
 VP_SYS_V_VREFBUF.Signal=SYS_V_VREFBUF
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
